--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">asap</string>
 
+    <string name="initiativesActivityLabel">Iniciativas</string>
+    <string name="deliverablesActivityLabel">Entregas</string>
+    <string name="initiaitveReportActivityLabel">Report</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="iw_activities">Atividades IW</string>
     <string name="projects">Projetos</string>
@@ -23,11 +27,9 @@
     <string name="total_number_of_last_day_wi">Vencem hoje:</string>
     <string name="total_number_of_with_admin">Com Adm.:</string>
 
-
     <string name="wrongNameOrPwd">Nome de usuário ou senha inválidos</string>
     <string name="device_not_connect">Dispositivo não conectado à rede</string>
     <string name="synchronizing_operation">Por favor, aguarde. Sincronizando as informações.</string>
-
 
     <string name="notImplemented">Não disponível</string>
     <string name="demoVersion">Executando em modo demonstração</string>
@@ -42,12 +44,15 @@
     <string name="onTimePrefix">P:</string>
     <string name="latePrefix">A:</string>
 
+    <string name="sendEmail">Enviar email Asap...</string>
+    <string name="missingEmailClient">Nenhum aplicativo de email está configurado</string>
+    <string name="emailTo">rcarvalho89@hotmail.com</string>
+    <string name="emailSubject">Asap</string>
+    <string name="emailHeader">Olá, por favor avaliar o status das entregas da iniciativa.</string>
+    <string name="emailFooter">Obrigado.</string>
 
+    <string name="title">Titulo:</string>
+    <string name="responsible">Responsável:</string>
+    <string name="date">Data:</string>
 
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_work_itens">WorkItensActivity</string>
-    <string name="title_activity_initiative_report">InitiativeReportActivity</string>
-    <string name="title_activity_initiatives_report">InitiativesReportActivity</string>
 </resources>
