--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="all_fields_needed">Ops! Para criar sua conta todos os campos devem ser preenchidos.</string>
 
     <string name="hello">Olá </string>
-    <string name="welcome">Seus problemas acabaram! \n\nFinalmente você resolverá o seu problema de falta de foco e indisciplina! \n\n Comece hoje mesmo a controlar as suas inciativas e fazer parte de uma rede aprovada por mais de 3 usuários! \n\nToque na tela para continuar.</string>
+    <string name="welcome">Leve seus planos com você!!!\n\n\u2022  Planeje as suas iniciativas e tarefas.\n\u2022  Crie grupos de trabalho.\n\u2022  Compartilhe e envie mensagens.\n\u2022  Defina e acompanhe prioridades.\n\u2022  Consulte desempenho.\n\n ...e tudo isso na nuvem, integrado a uma rede aprovada por mais de 3 usuários! \n\nToque na tela para continuar.</string>
     <string name="next">próximo</string>
 
     <string name="authenticating">Autenticando...</string>
