--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,14 +28,18 @@
     <string name="password">senha</string>
     <string name="signup_phrase">Ainda não tem uma conta? Crie uma.</string>
     <string name="title_activity_login">Login</string>
+
+
     <string name="identify_yourself">Informe seu usuário e senha, ou crie uma conta!</string>
     <string name="wrongNameOrPwd">Nome de usuário ou senha inválidos.</string>
     <string name="user_already_exists">Ops! Já existe um usuário identificado por este e-mail.</string>
     <string name="all_fields_needed_for_account">Ops! Para criar sua conta todos os campos devem ser preenchidos.</string>
     <string name="all_fields_needed_for_initiative">Ops! Para criar a iniciativa todos os campos devem ser preenchidos.</string>
+    <string name="initiative_already_exist">Ops! Já existe uma iniciativa com este título. Tente com outro.</string>
+    <string name="unexpected_error">Erro durante a execução. Provável indisponibilidade nos serviços da nuvem, tente mais tarde.</string>
 
     <string name="hello">Olá </string>
-    <string name="welcome">Leve seus planos com você!!!\n\n\u2022  Planeje as suas iniciativas e tarefas.\n\u2022  Crie grupos de trabalho.\n\u2022  Compartilhe e envie mensagens.\n\u2022  Defina e acompanhe prioridades.\n\u2022  Consulte desempenho.\n\n ...e tudo isso na nuvem, integrado a uma rede aprovada por mais de 3 usuários! \n\nToque na tela para continuar.</string>
+    <string name="welcome">Leve seus planos com você!!!\n\n\u2022  Planeje as suas iniciativas e tarefas.\n\u2022  Crie grupos de trabalho.\n\u2022  Compartilhe e envie mensagens.\n\u2022  Defina e acompanhe prioridades.\n\u2022  Consulte desempenho.\n\n\n\nToque na tela para continuar.</string>
     <string name="next">próximo</string>
 
     <string name="authenticating">Autenticando...</string>
